Add module version numbers and citations at the end of the notebooks

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -1211,6 +1211,24 @@
     "\n",
     "Go to the [Unit Exercises](Unit%20Exercises.ipynb) notebook and give the questions a try before continuing with the next unit."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citation\n",
+    "\n",
+    "If used in a scientific publication, cite Python as follows:\n",
+    "\n",
+    "Van Rossum, G and Drake Jr, FL (1995) _Python tutorial_, Centrum voor Wiskunde en Informatica, Amsterdam."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
