--- a/Unit 3 - NumPy.ipynb
+++ b/Unit 3 - NumPy.ipynb
@@ -32,6 +32,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook was written for NumPy version 1.15.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Vectors (1D)  \n",
     "\n",
     "### Array characteristics\n",
@@ -795,6 +811,21 @@
     " + [Dates and time](https://docs.scipy.org/doc/numpy/reference/arrays.datetime.html)\n",
     " + [Discrete (fast) Fourier transform](https://docs.scipy.org/doc/numpy/reference/routines.fft.html)\n",
     " + [Sorting, searching, and counting in arrays](https://docs.scipy.org/doc/numpy/reference/routines.sort.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citation\n",
+    "\n",
+    "If NumPy contributes to a scientific publication, cite it as follows:\n",
+    "\n",
+    "Oliphant, TE (2006) _A guide to NumPy_, Trelgol Publishing, USA.\n",
+    "\n",
+    "Van der Walt, S, Colbert, SC and Varoquaux, G (2011) \"The NumPy array: A structure for efficient numerical computation\", _Computing in Science & Engineering_, 13(2), 22–30, DOI: 10.1109/MCSE.2011.37.\n",
+    "\n",
+    "[(Publisher link)](https://aip.scitation.org/doi/abs/10.1109/MCSE.2011.37)"
    ]
   },
   {
