--- a/Unit 4 - Matplotlib.ipynb
+++ b/Unit 4 - Matplotlib.ipynb
@@ -25,12 +25,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was written for matplotlib version 3.0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.0.2'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import matplotlib\n",
+    "# matplotlib.__version__"
    ]
   },
   {
@@ -17509,11 +17537,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Citation\n",
+    "\n",
+    "If Matplotlib contributes to a project that leads to a scientific publication, please acknowledge this fact by citing it as follows:\n",
+    "\n",
+    "Hunter, JD (2007) \"Matplotlib: A 2D graphics environment\", _Computing in Science & Engineering_, 9(3), 90–95, DOI: 10.1109/MCSE.2007.55.\n",
+    "\n",
+    "[(Publisher link)](https://aip.scitation.org/doi/abs/10.1109/MCSE.2007.55). A BibTeX citation and DOI is also available [here](https://matplotlib.org/citing.html)."
+   ]
   },
   {
    "cell_type": "code",
