--- a/Unit 5 - Pandas.ipynb
+++ b/Unit 5 - Pandas.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,22 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was written for Pandas version 0.25.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.__version__"
    ]
   },
   {
@@ -82,8 +98,13 @@
     "The **optional** keyword arguments for `pd.Series` include `index` and `dtype` which allows you to specify custom index values and the data type, respectively. \n",
     "\n",
     "The data types (dtypes) are listed [here](https://docs.scipy.org/doc/numpy-1.10.4/user/basics.types.html). \n",
-    "Some examples include:\n",
-    "\n",
+    "Some examples include:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "|dtype      |Description         |\n",
     "| ---       | --- |\n",
     "| int8\t    | Byte (-128 to 127)|\n",
@@ -895,6 +916,17 @@
    "outputs": [],
    "source": [
     "hist = df.hist(bins=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citation\n",
+    "\n",
+    "McKinney, W (2010) \"Data structures for statistical computing in Python\", paper presented at the Proceedings of the 9th Python in Science Conference, 51–56.\n",
+    "\n",
+    "[(Publisher link)](http://conference.scipy.org/proceedings/scipy2010/mckinney.html)"
    ]
   },
   {
