--- a/Unit 6 - SciPy.ipynb
+++ b/Unit 6 - SciPy.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,22 @@
    "outputs": [],
    "source": [
     "# scipy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was written for SciPy version 1.1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scipy.__version__"
    ]
   },
   {
@@ -624,6 +640,17 @@
     "ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap='plasma', edgecolor='none')\n",
     "ax.set_title('Three-hump camel')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citation\n",
+    "\n",
+    "Virtanen, P, Gommers, R, Oliphant, TE, Haberland, M, Reddy, T, Cournapeau, D, Burovski, E, Peterson, P, Weckesser, W, Bright, J, Van der Walt, SJ, Brett, M, Wilson, J, Millman, KJ, Mayorov, N, Nelson, ARJ, Jones, E, Kern, R, Larson, E, Carey, CJ, Polat, I, Feng, Y, Moore, EW, Van der Plas, J, Laxalde, D, Perktold, J, Cimrman, R, Henriksen, I, Quintero, EA, Harris, CR, Archibald, AM, Ribeiro, AH, Pedregosa, F, Van Mulbregt, P and SciPy 1.0 Contributors (2019) \"SciPy 1.0–Fundamental algorithms for scientific computing in Python\", preprint arXiv: 1907.10121.\n",
+    "\n",
+    "[(Publisher link)](https://arxiv.org/abs/1907.10121)"
    ]
   },
   {
