--- a/Unit 7 - SymPy.ipynb
+++ b/Unit 7 - SymPy.ipynb
@@ -36,6 +36,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook was written for SymPy version 1.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sp.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Basic calculations\n",
     "\n",
     "Numeric outputs can be displayed as radicals or fractions. Note that \"pretty printing\" is disabled by the `print()` function."
@@ -1022,6 +1038,22 @@
    "source": [
     "# dir(sp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citation\n",
+    "\n",
+    "Meurer, A, Smith, CP, Paprocki, M, Čertík, O, Kirpichev, SB, Rocklin, M, Kumar, A, Ivanov, S, Moore, JK, Singh, S, Rathnayake, T, Vig, S, Granger, BE, Muller, RP, Bonazzi, F, Gupta, H, Vats, S, Johansson, F, Pedregosa, F, Curry, MJ, Terrel, AR, Roučka, Š, Saboo, A, Fernando, I, Kulal, S, Cimrman, R, Scopatz, A (2017) \"SymPy: Symbolic computing in Python\", _PeerJ Computer Science_, 3:e103, DOI: 10.7717/peerj-cs.103."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
