Fix XRD axis in Unit 5

--- a/Unit 5 - Pandas.ipynb
+++ b/Unit 5 - Pandas.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
     "\n",
     "    plt.plot(wl, it/factor, label='Raw', alpha=0.3)\n",
     "    plt.plot(wl, it_smooth/factor, label='{}'.format(file[5:11]))\n",
-    "plt.xlabel('Position (º2θ)')\n",
+    "plt.xlabel('2θ (°)')\n",
     "plt.ylabel('Normalised intensity (—)')\n",
     "plt.legend()\n",
     "plt.show()"
