Explain how to run cells explicitly. Fix spelling mistake.

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# First Steps on Jupyter\n",
     "\n",
-    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it's very easy to learn, read and maintain. Previously, the Spyder editor was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)! \n",
-    "\n",
-    "Blocks of text such as this one offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). Try to double-click these cells to see the hidden formatting syntax."
+    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it's very easy to learn, read and maintain. Previously, the Spyder editor was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)!"
    ]
   },
   {
@@ -25,13 +23,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Blocks of text, such as this one, offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). **Double-click** these cells to see the _hidden_ formatting syntax. \n",
+    "\n",
+    "Code is executed in cells such as the one below. Click in the cell and then press the **Run button** in the top menu bar or use the shortcut: Shift+Enter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simple math \n",
     "\n",
     "### Mathematical operations \n",
     "\n",
-    "Now let's see how the coding works. Use `*` for multiplication and `**` for exponentiation.\n",
-    "\n",
-    "The very last output of cell will automatically be printed. To see prior outputs, use the `print()` function. Use Shift+Enter as a Run shortcut. Use the hash symbol before comments."
+    "Now let's see how math works. Use `*` for multiplication and `**` for exponentiation."
    ]
   },
   {
@@ -40,7 +54,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "5 + 2"
+    "2*3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only the very last output of cell will automatically be printed. To see other prior outputs, use the `print()` function.  Use the hash symbol before comments."
    ]
   },
   {
@@ -49,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "50 - 3\n",
-    "print(3*2)\n",
+    "4 - 3\n",
+    "print(1 + 1)\n",
     "5**2"
    ]
   },
@@ -216,11 +237,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unhash this function by deleting the hash or by pressing ctrl+/. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or varaibles! They will usually turn green to remind you)**. \n",
+    "Unhash this function by deleting the hash or by pressing ctrl+/. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or variables! They will usually turn green to remind you)**. \n",
     "\n",
     "Type quit after you're done. \n",
     "\n",
-    "<span style=\"color:red\"> **Warning:** </span> If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menubar, under Kernel, press Restart (all varaible assignments will be undone)."
+    "<span style=\"color:red\"> **Warning:** </span> If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menu bar, under Kernel, press Restart (all variable assignments will be undone)."
    ]
   },
   {
@@ -1247,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
