Update conditional statements
Make example easier to understand

--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -149,8 +149,8 @@
     "print(True and False) # Can anything be both true and false?\n",
     "print(True or False) # Is at least one of the conditions true?\n",
     "print(True and not False)\n",
-    "print( (a > b) or (b >= c))\n",
-    "print( (a > b) and (b >= c)) "
+    "print((a > b) or (b >= c))\n",
+    "print((a > b) and (b >= c)) "
    ]
   },
   {
@@ -291,9 +291,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When _nested_ within loops, you can also use the `pass` (does nothing — used as a place-holder), `break` (breaks out of the innermost enclosing loop) or `continue` (continues with the next iteration of the loop) statements after a conditional statement.\n",
+    "Certain statements can also be used in _nested_ loops, such as:\n",
+    "- `pass` (does nothing — used as a place-holder)\n",
+    "- `break` (breaks out of the innermost enclosing loop)\n",
+    "- `continue` (continues with the next iteration of the loop)\n",
     "\n",
-    "Try including/excluding those statements here:"
+    "Look at how those statements affect this example:"
    ]
   },
   {
@@ -306,6 +309,32 @@
     "    if num % 2 == 0:\n",
     "        print(\"Even number  :\", num)\n",
     "        continue #break #try removing both\n",
+    "    print(\"Uneven number:\", num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(2, 10):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"Even number  :\", num)\n",
+    "        break\n",
+    "    print(\"Uneven number:\", num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(2, 10):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"Even number  :\", num)\n",
+    "        \n",
     "    print(\"Uneven number:\", num)"
    ]
   },
