--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "Let's say I want to calculate a range of tenths: 0.1, 0.2, ..., 0.9, 1.0 (remember `range()` outputs only integers).\n",
     "\n",
-    "For loops are used when we know for how long to iterate. While loops are conditional and terminate after a 'False' is reported. Use Tab for the required indentation, or Shift+Tab to remove it."
+    "If we know for how long to iterate, use a _for loops_. _While loops_ are conditional and terminate after a 'False' is reported. Use Tab for the required indentation, or Shift+Tab to remove it."
    ]
   },
   {
@@ -41,7 +41,7 @@
     "for i in range(1, 11):\n",
     "    y = i/10\n",
     "    print(y)\n",
-    "    # print(\"{:.20f}\".format(y))"
+    "#     print(\"{:.20f}\".format(y)) "
    ]
   },
   {
@@ -54,14 +54,26 @@
     "while i <= 0.9: # Always check your terminating condition\n",
     "    i = i + 0.1\n",
     "    print(i)\n",
-    "    # print(\"{:.20f}\".format(i))"
+    "#     print(\"{:.20f}\".format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while i <= 0.9: # Always check your terminating condition\n",
+    "    print(i)\n",
+    "    i = i + 0.1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What would happen if we switched the last 2 lines in the previous cell?\n",
+    "What would happen if we switched the last 2 lines in the previous cell? (The last printed value would be 0.9 not 1.0).\n",
     "\n",
     "You can also loop over other data sequences like strings, tuples or dictionaries. Use `enumerate()` to get both the index number and the object."
    ]
@@ -119,7 +131,7 @@
    "source": [
     "### Conditions\n",
     "\n",
-    "To check whether a while loop should continue, a condition (or tolerance) must be satisfied. Here are some of them:"
+    "To check whether a while loop should continue, a condition (or tolerance) must be satisfied. Let's assign some values to variables and compare them:"
    ]
   },
   {
@@ -166,9 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Never compare two floats!\n",
     "# x = 0.0 \n",
-    "# while not x == 1.0: \n",
+    "# while not x == 1.0: # Never compare two floats!\n",
     "#     x = x + 0.1 \n",
     "#     print(\"x=%19.17g\" % (x))"
    ]
@@ -234,7 +245,7 @@
     "\n",
     "However, if only certain commands are applicable to certain conditions (see above), branching can be used. \n",
     "\n",
-    "The ordering is cardinal. To initialise a branch, ask `if`. If the first condition isn't satisfied and you have another condition to check, ask `elif` (pronounced 'else-if'). If you have a final output that depends on all the previous conditions being unmet, use `else`. An `else` has no explicit condition statement.\n",
+    "The correct ordering is very important. To initialise a branch, ask `if`. If the first condition isn't satisfied and you have another condition to check, ask `elif` (pronounced 'else-if'). If you have a final output that depends on all the previous conditions being unmet, use `else`. An `else` has no explicit condition statement.\n",
     "\n",
     "The following will give __one or zero__ outputs: \n",
     " + `if`\n",
@@ -248,7 +259,7 @@
     "However, this is invalid:\n",
     " + `elif, else`\n",
     " \n",
-    "If you want every `True` condition to be executed, simply use a bunch of `if` statements below each other."
+    "If you want every `True` condition to be executed, simply use several `if` statements below each other."
    ]
   },
   {
@@ -308,7 +319,7 @@
     "for num in range(2, 10):\n",
     "    if num % 2 == 0:\n",
     "        print(\"Even number  :\", num)\n",
-    "        continue #break #try removing both\n",
+    "        continue \n",
     "    print(\"Uneven number:\", num)"
    ]
   },
@@ -334,7 +345,7 @@
     "for num in range(2, 10):\n",
     "    if num % 2 == 0:\n",
     "        print(\"Even number  :\", num)\n",
-    "        \n",
+    "        pass # Try removing this\n",
     "    print(\"Uneven number:\", num)"
    ]
   },
@@ -860,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   },
   "toc": {
    "base_numbering": 1,
