Start rewriting parameter discussion

--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Looping\" data-toc-modified-id=\"Looping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Looping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Conditions\" data-toc-modified-id=\"Conditions-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Conditions</a></span></li></ul></li><li><span><a href=\"#Branching\" data-toc-modified-id=\"Branching-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Branching</a></span></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Arguments\" data-toc-modified-id=\"Arguments-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Arguments</a></span></li><li><span><a href=\"#Interactivity\" data-toc-modified-id=\"Interactivity-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interactivity</a></span></li><li><span><a href=\"#Functional-programming\" data-toc-modified-id=\"Functional-programming-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Functional programming</a></span></li></ul></li><li><span><a href=\"#Style-guidelines\" data-toc-modified-id=\"Style-guidelines-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Style guidelines</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Looping\" data-toc-modified-id=\"Looping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Looping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Conditions\" data-toc-modified-id=\"Conditions-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Conditions</a></span></li></ul></li><li><span><a href=\"#Branching\" data-toc-modified-id=\"Branching-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Branching</a></span></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Parameters\" data-toc-modified-id=\"Parameters-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Parameters</a></span></li><li><span><a href=\"#Interactivity\" data-toc-modified-id=\"Interactivity-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interactivity</a></span></li><li><span><a href=\"#Functional-programming\" data-toc-modified-id=\"Functional-programming-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Functional programming</a></span></li></ul></li><li><span><a href=\"#Style-guidelines\" data-toc-modified-id=\"Style-guidelines-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Style guidelines</a></span></li></ul></div>"
    ]
   },
   {
@@ -390,11 +390,11 @@
    "source": [
     "## Functions \n",
     "\n",
-    "Functions allow us to group a number of statements into a logical block instead of copying it repeatedly. We communicate with a function through a clearly deﬁned interface, providing certain parameters to the function, and receiving some information back. It therefore acts like a \"black box\". As seen in the previous unit, some functions are built-in, whilst others are imported from modules. \n",
+    "Functions allow us to group a number of statements into a logical block instead of copying it repeatedly. We communicate with a function through a clearly defined interface, providing certain parameters to the function, and receiving some information back. It therefore acts like a \"black box\". As seen in the previous unit, some functions are built-in, whilst others are imported from modules. \n",
     "\n",
     "Let's try to write our own functions!\n",
     "\n",
-    "This first one requires 2 inputs."
+    "This first one is defined with 2 parameters that are required as inputs."
    ]
   },
   {
@@ -417,6 +417,13 @@
    "outputs": [],
    "source": [
     "multiplier(5, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters are defined by the names that appear in a function definition (in the previous example, that would be `a` and `b`), whereas arguments are the values actually passed to a function when calling it (like 5 and 6)."
    ]
   },
   {
@@ -509,10 +516,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Arguments\n",
+    "### Parameters\n",
     "\n",
-    "You may define your function with keyword arguments too. For example, this enables you to specify default values of your variables, such that if the user doesn't specify them an expected output is still delivered. The following function has 3 required inputs, with both of the keyword arguments set to a default value."
+    "\n",
+    "There are 5 types of [parameters](https://docs.python.org/3/glossary.html#term-parameter) that a function can accept. For example, this enables you to specify default values of your variables, such that if the user doesn't specify them an expected output is still delivered. The following function has 3 required inputs, with both of the keyword arguments set to a default value."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
