Rename Unit 1 exercises
Avoid confusion with the Unit 1 lecture notes. Give additional hints to beginners. Avoid potential division by zero in Ex 1.1

--- a/Tutorial exercises/Tut 1 - Basic syntax.ipynb
+++ b/Tutorial exercises/Tut 1 - Basic syntax.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# Exercises\n",
     "\n",
-    "I would recommend using a new (blank) notebook outside of the local repository to practise these questions, otherwise they may be be overwritten. To do this, ensure that you are \"above\" the Python-Tutorial folder in the Jupyter Dashboard (it is the tab with the icon of two orange curls, and it lists the files you have available). Then click the New button on the right and select Python 3. After opening the new notebook, you can rename it by clicking on the name Untitled at the top menu bar. "
+    "I would recommend using a notebook outside of the local repository to practise these questions, otherwise they may be be overwritten when you update the repository. \n",
+    "\n",
+    "To do this, you may either copy this notebook to a folder \"outside\" this Python-Tutorial folder and work in it there. Create a new code cell below a Markdown (text) cell, by clicking on it, then pressing the plus button at the top menu bar.\n",
+    "\n",
+    "Alternatively, you can create a blank notebook in the Jupyter Dashboard (it is the tab with the icon of two orange curls, and it lists the files you have available). Navigate to where you would like to create this blank notebook, then click the New button on the right and select Python 3. After opening the new notebook, you can rename it by clicking on the name Untitled at the top menu bar. "
    ]
   },
   {
@@ -17,9 +21,9 @@
    "source": [
     "## Generating random numbers\n",
     "\n",
-    "Write a program that adds a random float $ x_1 \\in$ [3, 8) with a random integer $ x_2 \\in$ [1, 15]. The answer should then be divided by a random float $ x_3 \\in$ [0, 1). Print each number to test if your answer seems reasonable.\n",
+    "Write a program that adds a random float $ x_1 \\in$ [0, 1) with a random integer $ x_2 \\in$ [1, 15]. The answer should then be divided by a random float $ x_3 \\in$ [3, 8). Print each number to test if your answer seems reasonable.\n",
     "\n",
-    "Hint: Import the `random` module. Use any of the the help functions to read up on how to use the `randint`, `random` and `uniform` functions. "
+    "Hint: Import the `random` module. Use any of the the help functions to read up on how to use the `randint`, `random` and `uniform` functions. One of these functions do not require any inputs."
    ]
   },
   {
@@ -37,9 +41,9 @@
     " + [27, 30, 44, 55, 0, 3, 9, 27, 30, 44, 55, 0, 3, 9]\n",
     " + [0, 0, 3, 3, 9, 9, 27, 27, 30, 30, 44, 44, 55, 55]\n",
     " \n",
-    "Hint: You may use slicing, as well as built-in functions (like `range` and `list`) and list attributes (like `append`, `pop` and `sort`) \n",
+    "Hint: You may use slicing, as well as built-in functions (like `range` and `list`) and list attributes (like `append`, `pop` and `sort`). \n",
     "\n",
-    "b) While testing your code, you may see that the output of the previous cells keep changing when you rerun them. After your first successful run, rewrite your code so that this does not happen.\n"
+    "b) While testing your code, you may see that the output of the previous cells keep changing when you rerun them. After your first successful run, rewrite your code so that this does not happen."
    ]
   },
   {
@@ -53,16 +57,10 @@
     "\n",
     "$$ \\frac{\\big(\\sqrt{333} - \\ln(7)\\big)^2}{5! \\times \\log(40) + 2e^{-5}} $$\n",
     "\n",
+    "Hint: `sqrt` and `factorial` are functions in the `math` module.\n",
+    "\n",
     "Answer: 1.3823"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee33af5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
