Rewrite Simple math section

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "Blocks of text, such as this one, offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). **Double-click** these cells to see the _hidden_ formatting syntax. \n",
     "\n",
-    "Code is executed in cells such as the one below. Click in the cell and then press the **Run button** in the top menu bar or use the shortcut: Shift+Enter."
+    "Code is executed in cells such as the one below. Click in the cell and then press the **Run button** in the top menu bar or use the shortcut: <kbd>Shift</kbd>+<kbd>Enter</kbd>."
    ]
   },
   {
@@ -45,7 +45,7 @@
     "\n",
     "### Mathematical operations \n",
     "\n",
-    "Now let's see how math works. Use `*` for multiplication and `**` for exponentiation."
+    "Now let's see how math works. Use `*` for multiplication. Use `**` for exponentiation (not `^`!)."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only the very last output of cell will automatically be printed. To see other prior outputs, use the `print()` function.  Use the hash symbol before comments."
+    "Only the very last output of cell will automatically be printed. To see other prior outputs, use the `print()` function. Run this next cell then change the first line to `print(4 - 3)`.  "
    ]
   },
   {
@@ -73,6 +73,15 @@
     "4 - 3\n",
     "print(1 + 1)\n",
     "5**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the hash symbol before comments. \n",
+    "\n",
+    "In Python 2, if you divided integers using the `/` operator, the result would be rounded down to the nearest integer. This is no longer the case:"
    ]
   },
   {
@@ -104,12 +113,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unhash the next line of code by deleting the hash and space before the 5. A nice shortcut is to click on the line and press <kbd>Ctrl</kbd>+<kbd>/</kbd> repeatedly to switch it between comment and code. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi"
+    "# This gives the ZeroDivisionError\n",
+    "# 5/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This gives the NameError, since the value of pi isn't defined yet\n",
+    "# pi"
    ]
   },
   {
@@ -123,11 +150,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "math.pi"
    ]
   },
@@ -149,42 +184,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = math.sin(1) \n",
-    "b = math.cos(2)\n",
-    "a + b"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you don't want to keep typing the name of a module, you can rename it, or simply import the functions you require (but remember to stay consistent). Note if you open a new notebook, you will have to import all the modules you would like to use again.\n",
+    "If you don't want to keep typing the name of a module, you have 2 options:\n",
+    "- rename it as an abbreviation, \n",
+    "- or only import the functions you require.\n",
     "\n",
-    "Furthermore, wildcard imports (`from module import *`) should be avoided, as they make it unclear which names are present in the namespace, confusing both readers and many automated tools."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from math import log10, log, e, pi, sin\n",
+    "Just remember to stay consistent. Note if you open a new notebook, you will have to import all the modules you would like to use again.\n",
     "\n",
-    "print(log10(1000))\n",
-    "log(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "At this point, go back up to the 6th coding cell. `pi` will now be printed"
+    "<span style=\"color:red\"> **Warning:** </span> Avoid wildcard imports (`from module import *`), as they make it unclear which names are present in the namespace, and confuse both readers and many automated tools."
    ]
   },
   {
@@ -194,7 +203,36 @@
    "outputs": [],
    "source": [
     "import math as m\n",
-    "m.sin(2.5)"
+    "print(m.sin(1))\n",
+    "print(m.cos(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sin, cos, log10, log, e, pi\n",
+    "print(sin(1))\n",
+    "print(cos(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(log10(1000))\n",
+    "print(log(e)) # This is the natural logarithm (ln)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, go back up to the 7th coding cell. Rerun it and see that `pi` will now be printed"
    ]
   },
   {
@@ -212,11 +250,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'comb',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'dist',\n",
+       " 'e',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'inf',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'isqrt',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'nan',\n",
+       " 'perm',\n",
+       " 'pi',\n",
+       " 'pow',\n",
+       " 'prod',\n",
+       " 'radians',\n",
+       " 'remainder',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'tau',\n",
+       " 'trunc']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(math)\n",
     "# The special functions like __name__ are pronounced \"dunder name\". Dunder is short for \"double underscore\" \n",
@@ -224,20 +332,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This just returns the module's name\n",
-    "math.__name__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unhash this function by deleting the hash or by pressing ctrl+/. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or variables! They will usually turn green to remind you)**. \n",
+    "Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or variables! They will usually turn green to remind you)**. \n",
     "\n",
     "Type quit after you're done. \n",
     "\n",
